<?xml version="1.0" encoding="utf-8"?>

<!--
    DroidDrumz, a simple yet effective, open source drum machine / sampler
    Copyright (C) 2014  Rici Underwood

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    c4po187@gmail.com
-->

<resources>

    <!-- Application Name -->
    <string name="app_name">DroidDrumz-Beta</string>

    <!-- General Debug String -->
    <string name="DBG_STR">Hello, DroidDrumz!</string>

    <!-- Action Menu (About Section) -->
    <string name="_action_about">About</string>
    <string name="action_about_ok">OK</string>
    <string name="about_content"><b>DroidDrumz 2014</b>\n\nThis application is still\nunder development.\n\nAuthor: Rici Underwood</string>
    <!-- Action Menu (Theme Section) -->
    <string name="_action_themes">Themes</string>
    <string name="tok">OK</string>
    <string name="tc">Cancel</string>
    <!-- Action Menu (Pitch) -->
    <string name="_action_pitch">Pitch</string>
    <!-- Action Menu (Presets) -->
    <string name="_action_presets">Presets</string>

    <!-- Splash Screen -->
    <string name="start_btn">start</string>
    <string name="exit_btn">exit</string>

    <!-- Button Alphas -->
    <string name="str_btn1">A</string>
    <string name="str_btn2">B</string>
    <string name="str_btn3">C</string>
    <string name="str_btn4">D</string>
    <string name="str_btn5">E</string>
    <string name="str_btn6">F</string>
    <string name="str_btn7">G</string>
    <string name="str_btn8">H</string>
    <string name="str_btn9">I</string>
    <string name="str_btn10">J</string>
    <string name="str_btn11">K</string>
    <string name="str_btn12">L</string>

    <!-- Assignment Menu -->
    <string name="pad_assign_label">Assignment Menu</string>
    <string name="row_img_descr">Icon to represent a particular sound type</string>
    <string name="current_row_current">Current</string>
    <string name="current_content">Content Here</string>

</resources>
