<?xml version="1.0" encoding="utf-8"?>

<!--
    DroidDrumz, a simple yet effective, open source drum machine / sampler
    Copyright (C) 2014  Rici Underwood

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    c4po187@gmail.com
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/assign_current_row"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/assign_current_current_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_row_current"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textColor="#61DE93"
        android:layout_marginLeft="@dimen/pa_menu_icon_left_margin"/>

    <TextView
        android:id="@+id/assign_current_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/assign_current_current_text"
        android:text="@string/current_content"
        android:textSize="22sp"
        android:layout_marginLeft="@dimen/pa_menu_icon_left_margin"
        android:layout_marginTop="@dimen/pa_menu_current_text_split" />

    <ImageView
        android:id="@+id/assign_current_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/row_img_descr"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/pa_menu_icon_right_margin" />

</RelativeLayout>
